5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1667_2321.log
== TEST (2019-04-16 16:09:28) 
-- CODE:
nome = input("Nome do bruxo: ")
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:09:43) 
-- CODE:
nome = input("Nome do bruxo: ")
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.131654
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:29) 
-- CODE:
nome = input("Nome do bruxo: ")
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:56) 
-- CODE:
nome.lower() = input("Nome do bruxo: ")
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- ERROR:
File "XXXX", line 1
    nome.lower() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:24) 
-- CODE:
nome = input("Nome do bruxo: ").lower()
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:23:13) 
-- CODE:
nome = input("Nome do bruxo: ").lower()
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.174705
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:15) 
-- CODE:
nome = input("Nome do bruxo: ").lower()
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:27) 
-- CODE:
nome = input("Nome do bruxo: ".lower())
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
nome do bruxo: 1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:56) 
-- CODE:
nome = input("Nome do bruxo: ".upper())
if(nome == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
NOME DO BRUXO: 1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:40) 
-- CODE:
nome = input("Nome do bruxo: ")
if(nome == "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:11) 
-- CODE:
nome = input("Nome do bruxo: ")
if(nome.upper() == "HARRY":
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- ERROR:
File "XXXX", line 2
    if(nome.upper() == "HARRY":
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:26) 
-- CODE:
nome = input("Nome do bruxo: ")
if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:38) 
-- CODE:
nome = input("Nome do bruxo: ")
print(nome.upper())
if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
LUNA
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:19) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
NOME DO BRUXO: 1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:49) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.149195
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:51) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.143429
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:51) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.100294
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:51) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.120222
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2321/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:52) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.247646
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
NOME DO BRUXO: 1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:52) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.132333
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2321/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:22) 
-- CODE:
nome = input("Nome do bruxo: ",.upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- ERROR:
File "XXXX", line 1
    nome = input("Nome do bruxo: ",.upper())
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:30) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
NOME DO BRUXO: 1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:10) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY").upper():
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(nome== "HARRY").upper():
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:13) 
-- CODE:
nome = input("Nome do bruxo: ".upper())

if(nome== "HARRY").upper():
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(nome== "HARRY").upper():
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:22) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY").upper():
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(nome== "HARRY").upper():
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:03) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:16) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:22) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:25) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.126259
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:27) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.174045
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:28) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.263392
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
1.7870204374327716
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:28) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.13051
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2321/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:28) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome== "HARRY".upper()):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:28) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome.upper() == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- OUTPUT:
1.7870204374327716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:37:38) 
-- CODE:
nome = input("Nome do bruxo: ")

if(nome.upper() == "HARRY"):
	espaco = 9.654
	tempo = 1.3479
	velocidade = espaco/tempo
	print(velocidade)
else:
	espaco = 4.984
	tempo = 2.789
	velocidade = espaco/tempo
	print(velocidade)
-- EXECUTION TIME:
0.181367
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
7.1622523926107275
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
